<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JP4application</string>
    <string name="first_button">first</string>
    <string translatable="false" name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="hint_email">Insert your email</string>
    <string name="hint_password">Insert your password</string>
    <string name="login_error">Login failed</string>
    <string name="login_success">Logged In succesfully</string>
    <string name="password_error">La password è errata.</string>
    <string name="email_error">L\'email è errata.</string>
    <string name="hint_phone">Insert your phone number</string>


    <string name="welcome">Welcome</string>

    <string name="m">Milk</string>
    <string name="mp">2,00</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="b">Bread</string>
    <string name="bp">1,00€</string>
    <string name="t">Tea</string>
    <string name="tp">2,50€</string>
    <string name="total">TOTAL</string>
    <string name="importo">€</string>
    <string name="buy">BUY</string>
    <string name="euro">€</string>

</resources>
