<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_line"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/m"
            android:id="@+id/item_name"
            android:textAlignment="center"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:gravity="center
            "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mp"
            android:id="@+id/item_price"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_plus"
            android:text="@string/plus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:id="@+id/item_quantity"
            android:gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_minus"
            android:text="@string/minus"/>

    </LinearLayout>

</LinearLayout>