<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_dark"
    android:id="@+id/background_bg"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:drawableStart="@drawable/baseline_mail_24"
        android:drawablePadding="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/buttonPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@color/buttonPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|end"
    android:layout_marginBottom="20dp"
    >

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onOff"/>

</LinearLayout>

</LinearLayout>