<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/header"
    android:layout_alignParentTop="true">


    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="16sp"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/emailTV"
    android:textAlignment="center"
    />
</LinearLayout>

 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/header"
     android:id="@+id/food_row"
     android:layout_above="@+id/cart"
     >

     </android.support.v7.widget.RecyclerView>



     <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/cart">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/total"
            style="@style/Base.TextAppearance.AppCompat.Display1"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="3"
                android:max="3"
                android:id="@+id/progress_bar"
                />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:enabled="false"/>

</LinearLayout>

     </RelativeLayout>
